# video-reader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vreader/: __init__.py  __main__.py  cli.py  extractor.py  transcriber.py  utils.py
tests/: test_vreader.py
